test db bounds, crashing...